--- a/config/database.yml
+++ b/config/database.yml
@@ -10,8 +10,15 @@ default: &default
   timeout: 5000
 
 development:
-  <<: *default
-  database: db/development.sqlite3
+    adapter: mysql2
+    database: zaman
+    encoding: utf8mb4
+    collation: utf8mb4_unicode_ci
+    hostname: 127.0.0.1
+    username: root
+    password: salam64511
+    socket: /var/run/mysqld/mysqld.sock
+
 
 # Warning: The database defined as "test" will be erased and
 # re-generated from your development database when you run "rake".
