--- a/config/database.yml
+++ b/config/database.yml
@@ -9,15 +9,16 @@ default: &default
   pool: 5
   timeout: 5000
 
+
 development:
     adapter: mysql2
+    encoding: utf8
     database: zaman
-    encoding: utf8mb4
-    collation: utf8mb4_unicode_ci
-    hostname: 127.0.0.1
     username: root
-    password: salam64511
-    socket: /var/run/mysqld/mysqld.sock
+    password:
+    socket: /tmp/mysql.sock
+
+
 
 
 # Warning: The database defined as "test" will be erased and
