--- a/config/database.yml
+++ b/config/database.yml
@@ -16,10 +16,8 @@ development:
     collation: utf8mb4_unicode_ci
     hostname: 127.0.0.1
     username: root
-    password: 
-    socket: /tmp/mysql.sock
-
-
+    password: salam64511
+    socket: /var/run/mysqld/mysqld.sock
 
 # Warning: The database defined as "test" will be erased and
 # re-generated from your development database when you run "rake".
@@ -29,5 +27,12 @@ test:
   database: db/test.sqlite3
 
 production:
-  <<: *default
-  database: db/production.sqlite3
+    adapter: mysql2
+    database: zaman
+    encoding: utf8mb4
+    collation: utf8mb4_unicode_ci
+    charset: utf8mb4
+    hostname: 127.0.0.1
+    username: root
+    password: salam64511
+    socket: /var/run/mysqld/mysqld.sock
